--- a/www/skins/dashboard/css/dashboard-pages/health.css
+++ b/www/skins/dashboard/css/dashboard-pages/health.css
@@ -3,12 +3,12 @@
  *----------------------------------------------------------------------------------
  */
  
-#content .chart-bar td {
+.health #content .chart-bar td {
     text-align: center;
-	color: #c7c7c7;
+    color: #c7c7c7;
     display: table-cell;
     padding: 0.75rem 0.5rem;
-    border: 3px solid #f9f9f9;
+    /* border: 3px solid #f9f9f9; */
     vertical-align: middle;
     font-weight: bold;
 }
