Remain Toast Message

--- a/www/skins/dashboard/css/dashboard-main/content.css
+++ b/www/skins/dashboard/css/dashboard-main/content.css
@@ -3,6 +3,20 @@
  *----------------------------------------------------------------------------------
  */
  
+#warningToast {
+	position: fixed;
+	top: 4rem;
+	left: 50%;
+	padding: 0.75rem 2rem; 
+	background-color: rgba(255, 165, 0, 0.86);
+	color: black;
+	border-radius: 4px;
+	transform: translateX(-50%);
+	font-family: system-ui, 'Font Awesome 6 Free';
+	font-weight: 600;
+	font-size: 1rem;
+ }
+ 
 .page-welcome #header {
     background-color: #006787;
 }
