--- a/www/skins/dashboard/css/dashboard-main/icons.css
+++ b/www/skins/dashboard/css/dashboard-main/icons.css
@@ -46,7 +46,7 @@
     display: inline-block;
     position: relative;
     margin: 0 0.5rem 0 0;
-    color: #e5e5e5;
+    color: #e5e5e5 !important;;
     font-size: 1.5rem;
     top: -0.2rem;
 }
@@ -55,6 +55,20 @@
  * NETWORKING
  *----------------------------------------------------------------------------------
  */
+ 
+#networking #subnav::before {
+    font-family: "Font Awesome 6 Free";
+	content: '\F0E8';
+    font-weight: bold;
+    margin: 0 1rem 0 0;
+    color: white;
+    position: relative;
+    font-size: 1.5rem;
+    top: 1.5rem;
+    background: #005179;
+    padding: 1.5rem;
+    border-radius: 8rem;
+}
  
 #networking-title.category-title::before {
     font-family: "Font Awesome 6 Free";
@@ -66,48 +80,16 @@
 	color: #adadad
 }
 
-#networking .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
-    content: '\F0E8';
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
-}
-
-#section-restart-networking .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+#section-restart-networking #subnav::before {
     content: '\F2F1' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
-#section-network .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+#section-network #subnav::before {
     content: '\F0E8' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
-#section-network-statistics .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+#section-network-statistics #subnav::before {
     content: '\F0EC' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
 .interface-name::before {
@@ -135,49 +117,32 @@
 	color: #adadad
 }
  
- #applications .page-header-title::before {
+#applications #subnav::before {
     font-family: "Font Awesome 6 Free";
     font-weight: bold;
-    content: '\F1B3';
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
+    margin: 0 1rem 0 0;
+    color: white;
     position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
+    font-size: 1.5rem;
+    top: 1.5rem;
+    background: #2743a9;
+    padding: 1.5rem;
+    border-radius: 8rem;
 }
 
-.openssl .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+.openssl #subnav::before {
+    padding: 1.35rem 1.5rem !important;
     content: '\F023' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
-.openssl-readall .page-header-title::before,
-.openssl-read .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+.openssl-readall #subnav::before,
+.openssl-read #subnav::before {
     content: '\F1C9' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
-.openssh .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+.openssh #subnav::before {
+    padding: 1.4rem 1.5rem !important;
     content: '\F084' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
 /*----------------------------------------------------------------------------------
@@ -195,113 +160,100 @@
 	color: #adadad
 }
 
-#system .page-header-title::before {
+#system #subnav::before {
     font-family: "Font Awesome 6 Free";
+    content: '\F21E';
     font-weight: bold;
-    content: '\E163';
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
+    margin: 0 1rem 0 0;
+    color: white;
     position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
+    font-size: 1.5rem;
+    top: 1.5rem;
+    background: #5a329f;
+    padding: 1.5rem;
+    border-radius: 8rem;
 }
 
-#section-hardware-information .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+.health-system #subnav::before,
+.health-proc #subnav::before,
+.health-api #subnav::before,
+.health-network #subnav::before,
+.health-networkstats #subnav::before {
+    top: 1.6rem !important;
+    font-size: 1.6rem !important;
+    padding: 1.41rem 1.5rem !important;
+}
+
+#section-hardware-information #subnav::before {
     content: '\F2DB' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
-#section-storage .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+#section-storage #subnav::before {
     content: '\F0A0' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
 #section-storage #legend-object b::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
     content: '\F0A0' !important;
-    margin: 0 0.5rem 0 -0.5rem;
-    color: rgb(0 0 0 / 32%);
-    position: relative;
-    font-size: 0.75rem;
 }
 
-.apk .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
-    content: '\F1B3' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
+.apk #subnav::before {
+    padding: 1.5rem 1.4rem !important;
+    content: '\F49E' !important;
 }
 
-.roles .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
+.cron #subnav::before {
+    padding: 1.4rem 1.5rem !important;
+    content: '\F1DA' !important;
+}
+
+.syslog #subnav::before {
+    content: '\F06E' !important;
+}
+
+.logfiles #subnav::before {
+    padding: 1.2rem 1.5rem !important;
+    content: '\F15C' !important;
+}
+
+.password #subnav::before {
+    content: '\F13E' !important;
+}
+
+.roles #subnav::before {
+	padding: 1.5rem 1.35rem !important;
     content: '\E595' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
 }
 
-.rc .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
-    content: '\F479' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
+.rc #subnav::before {
+    padding: 1.4rem 1.5rem !important;
+    content: '\F469' !important;
 }
 
-.modules .page-header-title::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
-    content: '\E4E2' !important;
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
-    position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
+.modules #subnav::before {
+    content: '\F1B3' !important;
 }
 
-#system .page-header-title::before {
+.skins #subnav::before {
+    padding: 1.2rem 1.5rem !important;
+    content: '\F043' !important;
+}
+
+.dispatcherror #subnav::before {
     font-family: "Font Awesome 6 Free";
+    content: '\E55D' !important;
     font-weight: bold;
-    content: '\F21E';
-	margin: 0 1rem 0 0;
-    color: rgb(0 0 0 / 30%);
+    margin: 0 1rem 0 0;
+    color: white;
     position: relative;
-    font-size: 2rem;
-    top: 0.4rem;
+    font-size: 1.5rem;
+    top: 1.5rem;
+    background: #ff5454;
+    padding: 1.5rem;
+    border-radius: 8rem;
 }
 
 .welcome .dashboard-title-memory::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: bold;
     content: '\F538' !important;
-    display: inline-block;
-    position: relative;
-    margin: 0 0.5rem 0 0;
-    color: inherit;
-    font-size: 0.7rem;
 }
 
 .welcome .system-uptodate .dashboard-title-system::before {
