--- a/www/skins/dashboard/css/dashboard-main/icons.css
+++ b/www/skins/dashboard/css/dashboard-main/icons.css
@@ -193,7 +193,11 @@
 }
 
 #section-storage #legend-object b::before {
-    content: '\F0A0' !important;
+    opacity: 0.33;
+    font-family: "Font Awesome 6 Free";
+    font-weight: bold;
+    content: '\F1C0' !important;
+    margin: 0 0.5rem 0 0;
 }
 
 .apk #subnav::before {
@@ -358,7 +362,6 @@
     display: inline-block;
     position: relative;
     margin: 0 0.5rem 0 0;
-    color: #ff69b4;
     font-size: 0.75rem;
     top: 0;
 }
@@ -370,9 +373,17 @@
     display: inline-block;
     position: relative;
     margin: 0 0.5rem 0 0;
-    color: #ff7800;
 	font-size: 0.75rem;
     top: 0;
+}
+
+.icon-disk {
+    margin: 0 0.25rem 0 0;
+    opacity: 0.6;
+}
+
+.welcome .dashboard-title .fa-solid.fa-square {
+    margin: 0 0.5rem 0 0;
 }
 
 /*.version-number-uptodate:after,
