Change Color & Disk Template

--- a/www/skins/dashboard/css/dashboard-main/dark.css
+++ b/www/skins/dashboard/css/dashboard-main/dark.css
@@ -122,3 +122,16 @@ html.app-logon.dark-theme {
 .dark-theme .fa-solid.fa-circle-half-stroke {
     color: rgb(99 0 210) !important;
 }
+
+.dark-theme #disk-listing {
+    background: inherit !important;
+}
+
+.dark-theme .page-welcome #capacity-free {
+    color: #c9c9c9 !important;
+    background: #404040 !important;
+}
+
+.dark-theme .welcome .dashboard-title {
+    border-top: 1px solid #505050 !important;
+}
