--- a/www/skins/dashboard/css/dashboard-pages/health.css
+++ b/www/skins/dashboard/css/dashboard-pages/health.css
@@ -71,9 +71,10 @@
 #legend-object {
     text-align: left !important;
     font-size: 0.75rem;
-    color: #a7a7a7;
+    color: #cbcbcb !important;
+    border-color: #fbfbfb !important;
     border-radius: 4px;
-    padding: 0.75rem 0.1rem !important;
+    padding: 0.75rem 0.1rem;
 }
 
 #legend b {
